--- a/sampleGameProvider/public/index.html
+++ b/sampleGameProvider/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-	<title>PrettyAn</title>
+	<title>PrettyAnna</title>
 	
 	<!-- Standardised web app manifest -->
 	<link rel="manifest" href="appmanifest.json" />
